// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx iTQnTB"
    >
      <div
        class="sc-dIvqjp iaFmok"
      >
        <input
          class="sc-crzoUp jQLlWv"
          id="textField"
          name="name"
          type="text"
          value="test"
        />
      </div>
      <span
        class="sc-iqAbSa dmIjtF"
      >
        Bad name
      </span>
    </div>
  </form>
</div>
`;

exports[`<TextField /> matches snapshot 1`] = `
<input
  class="sc-crzoUp kUQhja"
  id="textField"
  name="name"
  type="text"
  value=""
/>
`;

exports[`<TextField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx iTQnTB"
    >
      <label
        for="name"
      >
        Test*
      </label>
      <div
        class="sc-dIvqjp iaFmok"
      >
        <input
          class="sc-crzoUp jQLlWv"
          id="textField"
          label="Test"
          name="name"
          required=""
          type="text"
          value=""
        />
      </div>
      <span
        class="sc-iqAbSa dmIjtF"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<TextField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx iTQnTB"
    >
      <label
        for="name"
      >
        Test
      </label>
      <div
        class="sc-dIvqjp iaFmok"
      >
        <input
          class="sc-crzoUp kUQhja"
          id="textField"
          label="Test"
          name="name"
          type="text"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;
